# openagents

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  e2e-launcher-test.js  install.ps1  install.sh  llms.txt  pyproject.toml  setup.cfg  setup.py
.claude/: settings.json
.claude/skills/: openagents-workspace.md
.githooks/: commit-msg
.github/: spam-keywords.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: agent-connector.yml  agent-e2e-smoke.yml  agent-mirror.yml  check-commits.yml  desktop-build-win.yml  desktop-build.yml  issue-triage.yml  platform-tests.yml  pypi-publish.yml  pytest.yml  studio-build.yml  test-cli.yml  test-desktop.yml  test-e2e.yml
Formula/: openagents.rb
changelogs/blogs/: 2026-04-23-gemini_integration_journey.md  2026-04-24-hermes-agent-integration.md  2026-04-24-workspace-deletion-feature.md  2026-05-27-cloud-agents.md
changelogs/notes/: gemini_integration_fix.md
deploy/ecs/: README.md  task-definition.json
docs/: openagents_network_model.md  skill-install-e2e.md
docs/agents/: github-copilot-cli.md
docs/api/: api-reference.mdx
docs/cli/: cli-overview.mdx
docs/concepts/: agent-connection.mdx  agent-networks.mdx  core-concepts.mdx  network-mods.mdx  openagents-studio.mdx  transports.mdx
docs/events/: event-references.mdx
docs/getting-started/: installation.mdx  quick-start-guide.mdx
docs/guides/: artifact-panel-file-return.md  cline.md  identity_quickstart.md
docs/network-configuration/: network-configuration.mdx
docs/projects/: agent_workspace.md  agent_workspace_onboarding_flow.md  identity_project.md  openagents_agent_client_concept.md  openagents_agent_client_task_tracker.md  openagents_launcher_bugs.md  workspace_migration.md
docs/python-interface/: launching-a-network.mdx  python-interface.mdx  work-with-llm-based-agents.mdx
docs/studio-reference/: studio-reference.mdx
docs/tutorials/: demo-grammar-check-forum.mdx  demo-hello-world.mdx  demo-research-team.mdx  demo-startup-pitch-room.mdx  demo-tech-news-stream.mdx  start-network.mdx  tutorials.mdx  yaml-based-agents.mdx
docs/updates/: 2025-01-10-alternative-service-finder.mdx  2025-01-15-llms-txt-documentation.mdx  2025-12-18-elon-musk-tracker.mdx
examples/: workspace_test.yaml
infra/: agent_connector_app_test_notes.md  test_app.js  test_release.py  watcher_win.py
internal_frontend/: readme-mock.html
scripts/: bump_version.py  debug_install.py  install.ps1  install.sh  install_simple.ps1
sdk/demos/00_hello_world/: README.md
sdk/demos/01_startup_pitch_room/: README.md
sdk/demos/02_tech_news_stream/: README.md
sdk/demos/03_research_team/: README.md
sdk/demos/04_grammar_check_forum/: README.md
sdk/demos/05_agentworld/: README.md
sdk/demos/06_elon_musk_tracker/: README.md
sdk/demos/07_grammar_check_forum_bedrock/: README.md
sdk/examples/: grpcs_README.md  grpcs_example.py
sdk/examples/agentworld_network/: network.yaml  simple_game_agent.py  test_network.py
sdk/examples/feed_test/: README.md
sdk/examples/product_review_forum/: README.md
sdk/examples/shared_document_network/: README.md
sdk/src/openagents/: __init__.py  cli.py  cli_daemon.py  cli_helpers.py  cli_identity.py  cli_network.py  daemon_config.py  mcp_server.py
sdk/src/openagents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/studio/: COLLABORATIVE_EDITOR_README.md  PASSWORD_VERIFICATION_IMPLEMENTATION.md
src/openagents/: __init__.py  __main__.py  agent_setup.py  cli.py  cli_agent.py  cli_daemon.py  cli_helpers.py  cli_identity.py  cli_legacy.py  cli_network.py  cli_packages.py  cli_shared.py  connect.py  daemon.py  daemon_config.py  mcp_server.py  plugin_registry.py  tunnel.py  workspace_client.py
src/openagents/adapters/: base.py  claude.py  codex.py  cursor.py  nanoclaw.py  openclaw.py  opencode.py  utils.py  workspace_prompt.py
src/openagents/agentid/: __init__.py  client.py  exceptions.py  (+2 more)
studio/: craco.config.js  package-lock.json  package.json  tsconfig.json
tests/: README.md  conftest.py  test_litellm_provider.py  test_onm_addressing.py  test_onm_events.py  test_onm_pipeline.py  test_workspace_prompt_browser.py  test_workspace_sdk.py
tests/agentid/: __init__.py  test_client.py  test_parser.py
tests/agents/: test_agent_manager.py  test_aider.py  test_amp.py  test_autogen_agent.py  test_cursor_install_detection.py  test_exa_search.py  test_goose_adapter.py  test_goose_stream.py  test_load_mcp.py  test_loading_from_yaml.py  test_orchestrator.py  test_real_agent_network_integration.py  test_yaml_agent_custom_tools.py
tests/e2e/: README.md  agent-smoke.js
tests/http/: test_mod_settings_api.py
tests/lms/: test_minimax_provider.py
tests/platform/: config.yaml  conftest.py
tmp/: bench.py
tmp/docs/: BLOG_PUBLISHING.md  DEVELOPER_GUIDE.md
tmp/mocks/: 01-dashboard.html  02-marketplace.html  03-agent-detail.html  04-workspaces.html  05-chat.html  06-onboarding.html  styles.css
workspace/: Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
workspace/backend/: .build-trigger  .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  alembic.ini  backend.Dockerfile  deploy.sh  entrypoint.sh  railway.toml  requirements.txt  run_local.py  vercel.json
workspace/frontend/: .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
(+416 files in other folders)
